src/components/Switch/index.scss
.c-switch {
	--c-switch-width: 42px;
	--c-switch-height: 24px;
	--c-switch-handle-size: calc(var(--c-switch-height) - 10px);
	--c-switch-border-radius: 20px;

	background-color: rgb(var(--g-color-background));
	min-height: var(--c-switch-height);
	max-height: var(--c-switch-height);
	min-width: var(--c-switch-width);
	max-width: var(--c-switch-width);
	border-radius: var(--c-switch-border-radius);
	border: 1px solid rgba(var(--g-color-on-surface), var(--g-opacity-border));
	position: relative;
	transition-duration: .3s;

	:root[data-corner=sharp] & { --c-switch-border-radius: 0px }
	:root[data-corner=semi-round] & { --c-switch-border-radius: 4px }

	:root[data-platform=desktop] & {
		--c-switch-height: 20px;
		--c-switch-width: 34px;
	}
	:root[data-platform=mobile] & {
		--c-switch-height: 32px;
		--c-switch-width: 54px;
	}

	&[data-c-disabled] {
		cursor: not-allowed;
		background-color: rgba(var(--g-color-on-surface), var(--g-opacity4));

		&[data-c-checked] > div {
			left: calc(100% - calc(var(--c-switch-handle-size) + 4px));
		}

		& * {
			cursor: not-allowed;
		}

		> div {
			background-color: rgba(var(--g-color-on-surface), var(--g-opacity-inv4));
		}
	}

	&:not([data-c-disabled]){
		@media (hover: hover) {
			&:hover {
				cursor: pointer;
				--c-switch-handle-size: calc(var(--c-switch-height) - 6px);

				& * {
					cursor: pointer;
				}

				&[data-c-checked] > div {
					transform: translate(2px, -2px);
				}

				> div {
					transform: translate(-2px, -2px);

					:root:not([data-corner=sharp]) & {
						border-radius: max(0px, var(--c-switch-border-radius) - 2px);
					}
				}
			}
		}

		&:active {
			@media (hover: hover) {
				--c-switch-handle-size: calc(var(--c-switch-height) - 10px);

				> div {
					transform: none !important;
				}
			}

			@media (hover: none) {
				--c-switch-handle-size: calc(var(--c-switch-height) - 6px);

				&[data-c-checked] > div {
					transform: translate(2px, -2px);
				}

				> div {
					transform: translate(-2px, -2px);

					:root:not([data-corner=sharp]) & {
						border-radius: max(0px, var(--c-switch-border-radius) - 2px);
					}
				}
			}
		}

		&[data-c-checked]{
			background-color: rgb(var(--g-color-accent));
			border-color: rgb(var(--g-color-accent));

			> div {
				background-color: rgb(var(--g-color-surface));
				left: calc(100% - calc(var(--c-switch-handle-size) + 4px));
			}
		}
	}

	&:has( > input:focus-visible) {
		outline: auto;
	}

	> input {
		-moz-appearance: none;
		-webkit-appearance: none;
		appearance: none;
	}

	> div {
		position: absolute;
		top: 4px;
		left: 4px;
		height: var(--c-switch-handle-size);
		width: var(--c-switch-handle-size);
		background-color: rgb(var(--g-color-accent));
		transition-duration: .3s;

		:root:not([data-c-corner=sharp]) & {
			border-radius: max(0px, var(--c-switch-border-radius) - 6px);
		}
	}
}

